Add affiliate marketing, welcome message
* Add a blue arrow pointing at the input box
* Add welcome message for first-time users as well as
  disclosure for affiliate marketing links
* Implement the affiliate marketing link toggle
* Hide the welcome once we start looking up items

--- a/redmart/index.css
+++ b/redmart/index.css
@@ -22,6 +22,20 @@ body {
 #items {
   width: 100% ! important;
 }
+#welcome, #disclosure {
+  margin: 0 auto 3vw auto;
+  text-align: center;
+}
+#welcome {
+  width: 40vw;
+}
+#disclosure {
+  font-size: 70%;
+}
+#affiliate-toggle {
+  cursor: pointer;
+  color: brown;
+}
 
 @media (max-width: 640px) {
   #lookup input[type=number] {
@@ -29,5 +43,8 @@ body {
   }
   #lookup * {
     font-size: calc(0.75em + 1vw);
+  }
+  #welcome, #disclosure {
+    width: 75%;
   }
 }
