Revert "Use maskMoney to allow money input"
This reverts commit 2e65082a43321c2554018b05230d2a33b6e6c365.

--- a/redmart/index.css
+++ b/redmart/index.css
@@ -16,7 +16,7 @@ body {
 #lookup * {
   font-size: 1.25em;
 }
-#lookup input[type=text] {
+#lookup input[type=number] {
   width: 40vw;
 }
 #items {
@@ -38,7 +38,7 @@ body {
 }
 
 @media (max-width: 640px) {
-  #lookup input[type=text] {
+  #lookup input[type=number] {
     width: 100%;
   }
   #lookup * {
